@@ -54,6 +54,7 @@
     <Compile Include="ContractBehaviour\WaypointGenerator.cs" />
     <Compile Include="ContractParameter\SpecificOrbitWrapper.cs" />
     <Compile Include="ContractParameter\AlwaysTrue.cs" />
+    <Compile Include="ContractParameter\VesselParameterDelegator.cs" />
     <Compile Include="ContractParameter\VesselMass.cs" />
     <Compile Include="ContractRequirement\ExpressionRequirement.cs" />
     <Compile Include="ContractRequirement\FacilityRequirement.cs" />
@@ -62,6 +63,7 @@
     <Compile Include="ContractBehaviour\SpawnKerbal.cs" />
     <Compile Include="IContractConfiguratorFactory.cs" />
     <Compile Include="LoggingUtil.cs" />
+    <Compile Include="ParameterFactory\ReachSpecificOrbitFactory.cs" />
     <Compile Include="ParameterFactory\VesselMassFactory.cs" />
     <Compile Include="PersistentDataStore.cs" />
     <Compile Include="ContractParameter\Timer.cs" />
