@@ -19,20 +19,31 @@ CONTRACT_TYPE
 
     maxSimultaneous = 1
 
-    // The RecoverKerbal parameter is met when the named Kerbal is "recovered" (ie. goes back
-    // in to the available list at the astronaut complex).  This is from the Squad "rescue"
-    // contracts.
     PARAMETER
     {
-        name = RecoverKerbal1
-        type = RecoverKerbal
+        name = VesselParameterGroup1
+        type = VesselParameterGroup
 
-        // The Kerbal to be recovered
-        kerbal = Jebediah Kerman
-
-        // Text to use for the parameter
-        // Default = <kerbal>: Recovered
+        // The text to display.
+        // Default - Do the following for <duration>
         //title = 
+
+        // The duration that the conditions must be satisfied for.  Can specify values in
+        // years (y), days (d), hours (h), minutes (m), seconds (s) or any combination of those.
+        duration = 10d 2h
+
+
+        PARAMETER
+        {
+            name = ReachSpecificOrbit1
+            type = ReachSpecificOrbit
+
+            // The index (0-based) in the OrbitGenerator behaviour of the orbit we
+            // wish to reference.
+            // Default = 0
+            index = 0
+        }
+
     }
 
     BEHAVIOUR
