@@ -1,6 +1,7 @@
 Contract Configurator 0.4.0
 - Added WaypointGenerator behaviour.  Allows creation of waypoints.
 - Added OrbitGenerator behaviour.  Allows creation of orbits.
+- Added ReachSpecificOrbit parameter (for use with OrbitGenerator behaviour).
 - Added HasCrew requirement.  Allows filtering on trait, experience level and count.
 - Updated HasCrew parameter to support trait and experience level filtering.
 - Added VesselMass parameter.
